tests/miniJava/neg/000249_mutation.MiniJava
class java { public static void length Main ( String [ ] java ) { { } } }
